--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-ACCOUNT=111111
-PASSWORD=111111
-ADDRESS=北京市 · 北京市
-CITY=朝阳区
-PROVINCE=北京市
-# 经度·纬度 
+ACCOUNT=17763118082
+密码= Lsz020415
+地址=山东省威海市
+城市=环翠区
+省=威海市
+#经度·纬度 
 # 参考：https://lbs.amap.com/console/show/picker
-LONGITUDE=111.0
-LATITUDE=111.0
+LONGITUDE=122
+LATITUDE=37
 # 方糖推送服务
-KEY=xxxx
+KEY=xxxx 
